# MineWebClient

./: CMakeLists.txt  webserver.py
assets/: manifest.json
assets/shaders/: fragFXAA.glsl  fragbill.glsl  fragfont.glsl  fragment.glsl  vertFXAA.glsl  vertbill.glsl  vertentity.glsl  vertex.glsl  vertfont.glsl
src/: Camera.hpp  InputHandler.cpp  InputHandler.hpp  Shader.hpp  main.cpp  main.hpp  payload.html
src/Entities/: Entity.hpp
src/Event/: Event.hpp  EventBus.hpp  Listener.hpp
src/Event/Events/: KeyEvent.hpp  MouseButtonEvent.hpp  MouseMoveEvent.hpp  TickEvent.hpp
src/GUI/: GUIManager.cpp  GUIManager.hpp
src/GUI/Elements/: Element.hpp  EnterElement.cpp  EnterElement.hpp  TextElement.cpp  TextElement.hpp
src/Modding/: Mod.cpp  Mod.hpp  ModManager.cpp  ModManager.hpp
src/Objects/: AirObject.hpp  BillboardObject.cpp  BillboardObject.hpp  BlockObject.cpp  BlockObject.hpp  EntityObject.cpp  EntityObject.hpp  LightObject.cpp  LightObject.hpp  Object.hpp
src/Physics/: PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsObject.cpp  PhysicsObject.hpp
src/Protocol/: Packet.hpp  PacketHelper.hpp  Socket.cpp  Socket.hpp
src/Protocol/Packets/: AddMapObject.hpp  ChatMessage.hpp  EditChunk.hpp  EntityAction.hpp  GenerateChunk.hpp  HandShakePacket.hpp  LightMap.hpp  NetworkSettingsPacket.hpp  PlayerAuthInput.hpp  RegisterMod.hpp  TransferMod.hpp
src/Utils/: BlockRegistry.cpp  BlockRegistry.hpp  ChunkMap.cpp  ChunkMap.hpp  FontManager.cpp  FontManager.hpp  GetAABB.hpp  TextureManager.cpp  TextureManager.hpp  VertexManager.cpp  VertexManager.hpp  vec3Comparator.hpp
